# ViT_CIFAR-100

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/vit-cifar-100/: config.py  main.py  net.py  preprocessing.py  train.py
