[project]
name = "vit-cifar-10"
version = "0.1.0"
description = ""
authors = [
    {name = "miklrz"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "einops (>=0.8.1,<0.9.0)",
    "torchsummary (>=1.5.1,<2.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "wandb (>=0.19.9,<0.20.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
